Fix display on mobile

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -89,7 +89,7 @@
 /* Mobile */
 @media (max-width: 700px) {
   .content {
-    flex-direction: column;
+    grid-template-columns: 1fr;
   }
 }
 
